--- a/Android/AndroidPrimeWorker/res/layout/activity_prime_worker_main.xml
+++ b/Android/AndroidPrimeWorker/res/layout/activity_prime_worker_main.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:stretchColumns="0,1"
         android:keepScreenOn="true" >
     </TableLayout>
     <!--
