--- a/Android/AndroidPrimeWorker/res/layout/activity_prime_worker_main.xml
+++ b/Android/AndroidPrimeWorker/res/layout/activity_prime_worker_main.xml
@@ -10,12 +10,32 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc.
     -->
+    <LinearLayout
+            android:id="@+id/linear_layout1"
+            style="?buttonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center_horizontal"
+            android:paddingTop="100dp"
+            android:background="@color/black_overlay"
+            android:orientation="horizontal"
+            tools:ignore="UselessParent" >
+            <TextView
+                android:id="@+id/textView_points"
+                style="?buttonBarStyle"
+            	android:layout_width="match_parent"
+            	android:layout_height="wrap_content"
+            	android:layout_gravity="top|center_horizontal"
+            	android:text="@string/prime_contribuition_message"
+            	>
+           </TextView>
+    </LinearLayout>
 
 	<ScrollView
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:scrollbars="none"
-	    android:paddingTop="80dp"
+	    android:paddingTop="160dp"
 	    android:paddingBottom="150dp"
 	    >
 	    <TableLayout
